--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>EditorGroups</id>
     <name>Editor Groups</name>
-    <version>0.2</version>
+    <version>0.3</version>
 
     <vendor url="https://github.com/krasa/GrepConsole" email="vojta.krasa@gmail.com">Vojtech Krasa</vendor>
 
@@ -20,14 +20,13 @@
     </change-notes>
 
 
-
     <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
     <idea-version since-build="172.0"/>
 
     <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
          on how to target different products -->
     <depends>com.intellij.modules.lang</depends>
-                
+
     <extensions defaultExtensionNs="com.intellij">
         <editorNotificationProvider implementation="krasa.editorGroups.MyEditorNotificationsProvider"/>
         <!-- Add your extensions here -->
@@ -35,6 +34,8 @@
         <editorTabTitleProvider implementation="krasa.editorGroups.EditorGroupTabTitleProvider" order="first"/>
 
         <!--<fileBasedIndex implementation="krasa.editorGroups.EditorGroupFileBasedIndexExtension"/>-->
+
+        <fileBasedIndex implementation="krasa.editorGroups.index.EditorGroupIndex"/>
     </extensions>
 
     <project-components>
@@ -43,49 +44,53 @@
         </component>
     </project-components>
     <actions>
-        <group id="krasa.EditorGroups">
-            <action class="krasa.editorGroups.actions.RefreshAction" id="krasa.editorGroups.Refresh"
-                    text="Refresh Editor Groups">
-                <keyboard-shortcut first-keystroke="ctrl alt shift E" keymap="$default"/>
-            </action>
 
 
-            <action class="krasa.editorGroups.actions.PreviousAction" id="krasa.editorGroups.Previous"
-                    text=" Open Previous File in Group">
-                <keyboard-shortcut first-keystroke="ctrl  QUOTE" keymap="$default"/>
-                <mouse-shortcut keystroke="ctrl button143" keymap="$default"/>
-            </action>
-            <action class="krasa.editorGroups.actions.NextAction" id="krasa.editorGroups.Next"
-                    text=" Open Next File in Group">
-                <keyboard-shortcut first-keystroke="ctrl  BACK_SLASH" keymap="$default"/>
-                <mouse-shortcut keystroke="ctrl button142" keymap="$default"/>
-            </action>
+        <action class="krasa.editorGroups.actions.PreviousInNewTabAction" id="krasa.editorGroups.PreviousInNewTab"
+                text=" Open Previous File in Group in a New Tab">
+            <keyboard-shortcut first-keystroke="ctrl alt  QUOTE" keymap="$default"/>
+            <mouse-shortcut keystroke="ctrl alt button143" keymap="$default"/>
+        </action>
+        <action class="krasa.editorGroups.actions.NextInNewTabAction" id="krasa.editorGroups.NextInNewTab"
+                text=" Open Next File in Group in a New Tab">
+            <keyboard-shortcut first-keystroke="ctrl alt BACK_SLASH" keymap="$default"/>
+            <mouse-shortcut keystroke="ctrl alt button142" keymap="$default"/>
+        </action>
 
 
-            <action class="krasa.editorGroups.actions.PreviousInNewTabAction" id="krasa.editorGroups.PreviousInNewTab"
-                    text=" Open Previous File in Group in a New Tab">
-                <keyboard-shortcut first-keystroke="ctrl alt  QUOTE" keymap="$default"/>
-                <mouse-shortcut keystroke="ctrl alt button143" keymap="$default"/>
-            </action>
-            <action class="krasa.editorGroups.actions.NextInNewTabAction" id="krasa.editorGroups.NextInNewTab"
-                    text=" Open Next File in Group in a New Tab">
-                <keyboard-shortcut first-keystroke="ctrl alt BACK_SLASH" keymap="$default"/>
-                <mouse-shortcut keystroke="ctrl alt button142" keymap="$default"/>
-            </action>
+        <action class="krasa.editorGroups.actions.PreviousInNewWindowAction"
+                id="krasa.editorGroups.PreviousInNewWindow"
+                text=" Open Previous File in Group in a New Tab">
+            <keyboard-shortcut first-keystroke="ctrl alt shift QUOTE" keymap="$default"/>
+            <mouse-shortcut keystroke="ctrl alt shift button143" keymap="$default"/>
+        </action>
+        <action class="krasa.editorGroups.actions.NextInNewWindowAction" id="krasa.editorGroups.NextInNewWindow"
+                text=" Open Next File in Group in a New Tab">
+            <keyboard-shortcut first-keystroke="ctrl alt shift BACK_SLASH" keymap="$default"/>
+            <mouse-shortcut keystroke="ctrl alt shift button142" keymap="$default"/>
+        </action>
 
 
-            <action class="krasa.editorGroups.actions.PreviousInNewWindowAction"
-                    id="krasa.editorGroups.PreviousInNewWindow"
-                    text=" Open Previous File in Group in a New Tab">
-                <keyboard-shortcut first-keystroke="ctrl alt shift QUOTE" keymap="$default"/>
-                <mouse-shortcut keystroke="ctrl alt shift button143" keymap="$default"/>
-            </action>
-            <action class="krasa.editorGroups.actions.NextInNewWindowAction" id="krasa.editorGroups.NextInNewWindow"
-                    text=" Open Next File in Group in a New Tab">
-                <keyboard-shortcut first-keystroke="ctrl alt shift BACK_SLASH" keymap="$default"/>
-                <mouse-shortcut keystroke="ctrl alt shift button142" keymap="$default"/>
-            </action>
-        </group>
+        <action class="krasa.editorGroups.actions.RefreshAction" id="krasa.editorGroups.Refresh"
+                text="Refresh Editor Groups">
+            <keyboard-shortcut first-keystroke="ctrl alt shift E" keymap="$default"/>
+        </action>
+
+        <action class="krasa.editorGroups.actions.PreviousAction" id="krasa.editorGroups.Previous"
+                text=" Open Previous File in Group">
+            <keyboard-shortcut first-keystroke="ctrl  QUOTE" keymap="$default"/>
+            <mouse-shortcut keystroke="ctrl button143" keymap="$default"/>
+        </action>
+        <action class="krasa.editorGroups.actions.NextAction" id="krasa.editorGroups.Next"
+                text=" Open Next File in Group">
+            <keyboard-shortcut first-keystroke="ctrl  BACK_SLASH" keymap="$default"/>
+            <mouse-shortcut keystroke="ctrl button142" keymap="$default"/>
+        </action>
+
+
+        <action id="ReindexAction" class="krasa.editorGroups.index.ReindexAction" text="ReindexAction">
+            <keyboard-shortcut keymap="$default" first-keystroke="shift ctrl alt Y"/>
+        </action>
     </actions>
 
 </idea-plugin>
