--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -73,7 +73,7 @@
 
         <action class="krasa.editorGroups.actions.RefreshAction" id="krasa.editorGroups.Refresh"
                 text="Refresh Editor Groups">
-            <keyboard-shortcut first-keystroke="shift R" keymap="$default"/>
+            <keyboard-shortcut first-keystroke="alt shift Q" keymap="$default"/>
         </action>
 
         <action class="krasa.editorGroups.actions.PreviousAction" id="krasa.editorGroups.Previous"
