--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -48,7 +48,7 @@
 
         <action class="krasa.editorGroups.actions.PreviousInNewTabAction" id="krasa.editorGroups.PreviousInNewTab"
                 text=" Open Previous File in Group in a New Tab">
-            <keyboard-shortcut first-keystroke="ctrl alt  QUOTE" keymap="$default"/>
+            <keyboard-shortcut first-keystroke="ctrl alt QUOTE" keymap="$default"/>
             <mouse-shortcut keystroke="ctrl alt button143" keymap="$default"/>
         </action>
         <action class="krasa.editorGroups.actions.NextInNewTabAction" id="krasa.editorGroups.NextInNewTab"
@@ -73,7 +73,7 @@
 
         <action class="krasa.editorGroups.actions.RefreshAction" id="krasa.editorGroups.Refresh"
                 text="Refresh Editor Groups">
-            <keyboard-shortcut first-keystroke="alt shift Q" keymap="$default"/>
+            <keyboard-shortcut first-keystroke="ctrl alt Q" keymap="$default"/>
         </action>
 
         <action class="krasa.editorGroups.actions.PreviousAction" id="krasa.editorGroups.Previous"
@@ -89,7 +89,7 @@
 
 
         <action id="krasa.editorGroups.Reindex" class="krasa.editorGroups.index.ReindexAction"
-                text="Reindex This Project">
+                text="Reindex All Projects">
             <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt F3"/>
         </action>
 
@@ -100,6 +100,10 @@
         <action id="krasa.editorGroups.ToggleFolderEditorGroups"
                 class="krasa.editorGroups.actions.ToggleFolderEditorGroupsAction"
                 text="Toggle Automatic Editor Groups by a Current Folder"/>
+        <action id="krasa.editorGroups.SwitchGroup" class="krasa.editorGroups.actions.SwitchGroupAction"
+                text="Switch Editor Group">
+            <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt W"/>
+        </action>
     </actions>
 
 </idea-plugin>
