showing size in title config

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -106,7 +106,6 @@
                 class="krasa.editorGroups.actions.ToggleAutoFolderGroupsAction"
                 text="Automatic Editor Groups by a Current Folder"/>
 
-
         <action id="krasa.editorGroups.ToggleForce"
                 class="krasa.editorGroups.actions.ToggleForceAction"
                 text="Automatic Switching of Groups on Manual Refresh"/>
@@ -114,6 +113,11 @@
         <action id="krasa.editorGroups.ToggleHideEmpty"
                 class="krasa.editorGroups.actions.ToggleHideEmptyAction"
                 text="Hide the panel when the group is empty"/>
+
+
+        <action id="krasa.editorGroups.ToggleShowSize"
+                class="krasa.editorGroups.actions.ToggleShowSizeAction"
+                text="Show size at titles"/>
 
 
         <action id="krasa.editorGroups.SwitchGroup" class="krasa.editorGroups.actions.SwitchGroupAction"
