new faster filename index, optimizations

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -36,7 +36,9 @@
 
         <applicationService serviceImplementation="krasa.editorGroups.ApplicationConfiguration"/>
         <fileBasedIndex implementation="krasa.editorGroups.index.EditorGroupIndex"/>
+        <fileBasedIndex implementation="krasa.editorGroups.index.FilenameWithoutExtensionIndex"/>
         <projectService serviceImplementation="krasa.editorGroups.PanelRefresher"/>
+        <applicationService serviceImplementation="krasa.editorGroups.index.MyFileNameIndexService"/>
     </extensions>
 
     <project-components>
