do not use autogroups as last group when disabled at options

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -123,7 +123,7 @@
 
         <action id="krasa.editorGroups.ToggleShowSize"
                 class="krasa.editorGroups.actions.ToggleShowSizeAction"
-                text="Show size at titles"/>
+                text="Show group size at titles"/>
 
 
         <action id="krasa.editorGroups.SwitchGroup" class="krasa.editorGroups.actions.SwitchGroupAction"
