--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -76,7 +76,7 @@
         <group id="EditorGroupsTabPopupMenu"/>
 
         <action class="krasa.editorGroups.actions.PreviousAction" id="krasa.editorGroups.Previous"
-                text="Open Previous File in Group">
+                text="Open Previous File in Group" icon="/krasa/editorGroups/icons/back.png">
             <keyboard-shortcut first-keystroke="ctrl  SEMICOLON" keymap="$default"/>
             <mouse-shortcut keystroke="ctrl button143" keymap="$default"/>
         </action>
@@ -85,6 +85,7 @@
             <keyboard-shortcut first-keystroke="ctrl alt SEMICOLON" keymap="$default"/>
             <mouse-shortcut keystroke="ctrl alt button143" keymap="$default"/>
         </action>
+
         <action class="krasa.editorGroups.actions.PreviousInNewWindowAction"
                 id="krasa.editorGroups.PreviousInNewWindow"
                 text="Open Previous File in Group in a New Tab">
@@ -94,7 +95,7 @@
 
 
         <action class="krasa.editorGroups.actions.NextAction" id="krasa.editorGroups.Next"
-                text="Open Next File in Group">
+                text="Open Next File in Group" icon="/krasa/editorGroups/icons/forward.png">
             <keyboard-shortcut first-keystroke="ctrl  QUOTE" keymap="$default"/>
             <mouse-shortcut keystroke="ctrl button142" keymap="$default"/>
         </action>
@@ -111,18 +112,20 @@
 
 
         <action class="krasa.editorGroups.actions.RefreshAction" id="krasa.editorGroups.Refresh"
-                text="Refresh" description="Refresh Editor Groups panel in current file">
+                text="Refresh" description="Refresh Editor Groups panel in current file"
+                icon="/krasa/editorGroups/icons/refresh.png">
             <keyboard-shortcut first-keystroke="ctrl alt Q" keymap="$default"/>
         </action>
 
 
         <action id="krasa.editorGroups.Reindex" class="krasa.editorGroups.index.ReindexAction"
-                text="Reindex All Projects">
-            <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt F3"/>
+                text="Reindex All Projects" icon="/krasa/editorGroups/icons/forceRefresh.png">
         </action>
 
         <action id="krasa.editorGroups.ReindexThisFile" class="krasa.editorGroups.index.ReindexThisFileAction"
+                icon="/krasa/editorGroups/icons/forceRefresh.png"
                 text="Reindex This File">
+            <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt F3"/>
         </action>
 
 
